# hackfn

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: readme.rs
