[package]
name = "hackfn"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Fake implementation of `std::ops::Fn` for user-defined data types."
repository = "https://github.com/dtolnay/hackfn"
documentation = "https://docs.rs/hackfn"
readme = "README.md"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "dtolnay/hackfn" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaround"]
targets = ["x86_64-unknown-linux-gnu"]
