[package]
name = "hackfn"
version = "0.1.8"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Fake implementation of `std::ops::Fn` for user-defined data types."
documentation = "https://docs.rs/hackfn"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/hackfn"
rust-version = "1.36"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaround"]
targets = ["x86_64-unknown-linux-gnu"]
